--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <h1>colors Box</h1>
 
     <h2>Choose Grid Size</h2>
-    <form id="sizePicker">
+    <form id="sizePicker" onsubmit="makeGrid(event)">
         Grid Height:
         <input type="number" id="inputHeight" name="height" min="1" value="1">
         Grid Width:
         <input type="number" id="inputWeight" name="width" min="1" value="1">
-        <input type="submit">
+        <input type="submit"> 
     </form>
 
     <h2>Pick A Color</h2>
